public class AnimatorStrings
{
    public static string isMoving = "isMoving";
    public static string isRunning = "isRunning";
    public static string directionX = "directionX";
    public static string directionY = "directionY";
    public static string lastMoveDirectionX = "lastMoveDirectionX";
    public static string lastMoveDirectionY = "lastMoveDirectionY";
    public static string hasTarget = "hasTarget";
    public static string attack = "attack";
    public static string useTool = "useTool";
}